openshift/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs-app
  labels:
    app: wikijs-app
    app.kubernetes.io/part-of: wikijs
    component: app 
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: wikijs-app
      deployment: wikijs-app
  template:
    metadata:
      labels: 
        app: wikijs-app 
        deployment: wikijs-app
    spec:
      containers:
        - name: wikijs-app
          image: 'ghcr.io/bazzadev/wikijs-openshift:main'
          ports:
            - containerPort: 3000
