openshift/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  app.kubernetes.io/part-of: wikijs
  component: database
  database: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
        deployment: db
    spec:
      volumes:
        - name: pv
          persistentVolumeClaim:
            claimName: db
      containers:
      - name: db
        image: 'registry.redhat.io/rhel8/postgresql-15'
        volumeMounts:
          - name: pv
            mountPath: /var/lib/pgsql/data
        ports:
        - containerPort: 5432
          protocol: TCP
