openshift/app-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: wiki
  labels:
    app: wiki
    app.kubernetes.io/part-of: wikijs
    component: web
spec:
  ports:
    - name: 3000-tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: wiki
    deployment: wiki
