openshift/db-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: db
  app.kubernetes.io/part-of: wikijs
  component: database
  database: postgresql
spec:
  selector:
    app: db
    deployment: db
  ports:
    - name: 5432-tcp
      protocol: TCP
      port: 5432
      targetPort: 5432
